# mean-shift-in-parallel

./: .gitignore  README.md  create_combined_omp_speedups_plots.py  create_combined_speedups_plots.py  create_graphs.py  download_datas.sh  generate_datasets.py  insert_cuda_timimngs_results.py  main.cu  plot_architectures.py  plot_datas.py
CUDA/: .gitignore  Dockerfile  docker-compose.yaml  mean_shift.cu  mean_shift.h
CUDA/MS_CUDA/: CMakeLists.txt  build.sh  create_all_timings.sh  execute.sh  execute_mean_shift.sh  execute_naive.sh  main.cu  main_naive.cu  run_mean_shift.sh  run_naive_version.sh  run_shared_version.sh  test.cpp  test.h  thread_settings.h  utility.h  utils.h
OpenMp/: CMakeLists.txt  build.sh  dynamic.cpp  execute_dynamic.sh  execute_static.sh  main.cpp  run.sh  run_dynamic_version.sh  run_static_version.sh  static.cpp
OpenMp/include/: geometricFunction.hpp  meanShiftOmp.hpp
Sequential/: CMakeLists.txt  execute.sh  main.cpp  run.sh
Sequential/include/: geometricFunction.hpp  meanShift.cpp  meanShift.hpp  utils.cpp  utils.hpp
datas/1000/: random_cts_1k.csv
results/: extract_speedup.py  extract_timings_seq_omp.sh  foo.csv  fooOmp.csv  speedups_cuda_naive.csv  speedups_cuda_shared.csv  speedups_omp_dynamic.csv  speedups_omp_static.csv  timings_cuda_naive.csv  timings_omp_static.csv  timings_seq.csv
results/GTX1050TI/: speedups_cuda_naive.csv  speedups_cuda_shared.csv  speedups_omp_dynamic.csv  timings_cuda_shared.csv  timings_seq.csv
results/GTX1660TI/: speedups_cuda_naive.csv  speedups_cuda_shared.csv  speedups_omp_dynamic.csv  speedups_omp_static.csv  timings_cuda_naive.csv  timings_cuda_shared.csv  timings_omp_dynamic.csv  timings_omp_static.csv  timings_seq.csv
results/RTX2060/: speedups_cuda_naive.csv  speedups_cuda_shared.csv  speedups_omp_dynamic.csv  speedups_omp_static.csv  timings_cuda_naive.csv  timings_cuda_shared.csv  timings_omp_dynamic.csv  timings_omp_static.csv  timings_seq.csv
